crates/flight-profile/src/snapshots/flight_profile__tests__capability_manifest_demo.snap
---
source: crates/flight-profile/src/lib.rs
expression: ctx
---
{
  "mode": "Demo",
  "limits": {
    "max_axis_output": 0.8,
    "max_ffb_torque": 20.0,
    "allow_high_torque": false,
    "max_expo": 0.6,
    "max_slew_rate": 50.0
  },
  "audit_enabled": false
}
