crates/flight-profile/src/snapshots/flight_profile__tests__capability_manifest_full.snap
---
source: crates/flight-profile/src/lib.rs
expression: ctx
---
{
  "mode": "Full",
  "limits": {
    "max_axis_output": 1.0,
    "max_ffb_torque": 50.0,
    "allow_high_torque": true,
    "max_expo": 1.0,
    "max_slew_rate": 100.0
  },
  "audit_enabled": false
}
