crates/flight-profile/src/snapshots/flight_profile__tests__profile_export_snapshot.snap
---
source: crates/flight-profile/src/lib.rs
assertion_line: 1149
expression: json
---
{
  "schema": "flight.profile/1",
  "sim": "msfs",
  "aircraft": {
    "icao": "C172"
  },
  "axes": {
    "pitch": {
      "deadzone": 0.03,
      "expo": 0.2,
      "slew_rate": 1.2,
      "detents": [],
      "curve": null,
      "filter": null
    }
  },
  "pof_overrides": null
}
