crates/flight-profile/src/snapshots/flight_profile__tests__profile_merged.snap
---
source: crates/flight-profile/src/lib.rs
expression: merged.canonicalize()
---
{"aircraft":{"icao":"C172"},"axes":{"pitch":{"curve":null,"deadzone":0.03,"detents":[],"expo":0.5,"filter":null,"slew_rate":1.2}},"pof_overrides":null,"schema":"flight.profile/1","sim":"msfs"}
