crates/flight-profile/src/snapshots/flight_profile__tests__profile_validation_error_schema.snap
---
source: crates/flight-profile/src/lib.rs
expression: err
---
Validation(
    "Unsupported schema version: flight.profile/99",
)
