crates/flight-profile/src/snapshots/flight_profile__tests__profile_yaml_round_trip.snap
---
source: crates/flight-profile/src/lib.rs
expression: profile
---
schema: flight.profile/1
sim: msfs
aircraft:
  icao: C172
axes:
  pitch:
    deadzone: 0.03
    expo: 0.2
    slew_rate: 1.2
    detents: []
    curve: ~
    filter: ~
pof_overrides: ~
