crates/flight-profile/src/snapshots/flight_profile__tests__validation_error_missing_schema_field.snap
---
source: crates/flight-profile/src/lib.rs
assertion_line: 942
expression: err.to_string()
---
missing field `schema`
